--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@
 .env.test.local
 .env.production.local
 
+.eslintrc.json
+.vscode/launch.json
+
+package-lock.json
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
